Closed Bug 192962 Opened 22 years ago Closed 22 years ago

Optimized builds do not include string.h

Categories

(NSPR :: NSPR, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: tenthumbs, Assigned: wtc)

Details

On Linux I get these warnings from an optimized build while building mozilla (cvs trunk build). priometh.c:313: warning: implicit declaration of function `memcpy' prrng.c:45: warning: implicit declaration of function `memcpy' They do not occur in a debug build. Both files include only primpl.h. I believe the problem actually occurs in nsprpub/pr/include/md/_unixos.h where string.h is included only if DEBUG is defined.
Thanks for the bug report. I just checked in a fix on the NSPR tip. Note that I can't simply include <string.h> in nsprpub/pr/include/md/_unixos.h because that header is only used by Unix platforms but priometh.d and prrng.c use memcpy on all platforms.
Status: NEW → RESOLVED
Closed: 22 years ago
OS: Linux → All
Hardware: PC → All
Resolution: --- → FIXED
Target Milestone: --- → 4.3
You need to log in before you can comment on or make changes to this bug.