Bug 192962: include <string.h> for the declaration of memcpy. Modified files: priometh.c prrng.c