nsprpub/pr/src/misc/prrng.c
@@ -34,6 +34,7 @@
 
 #include "primpl.h"
 
+#include <string.h>
 
 PRSize _pr_CopyLowBits( 
     void *dst, 
